--- a/Moviewer/Moviewer.csproj
+++ b/Moviewer/Moviewer.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Avalonia" Version="0.9.0" />
     <PackageReference Include="Avalonia.Desktop" Version="0.9.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Nito.AsyncEx" Version="3.0.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MovieApp.Styling\Moviewer.Styling.csproj" />
